5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4272/executions/1602_1017.log
== TEST (2019-03-27 11:20:49) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P1:")))
g2 = radians(float(input("Longitude de P2:")))
from sin import*


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    t1 = radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 11:22:45) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

t1 = radians(float(input("latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P1:")))
g2 = radians(float(input("Longitude de P2:")))
from math import*


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    t1 = radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 11:26:22) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

t1 = radians(float(input("Latitude de P1:")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P1:")))
g2 = radians(float(input("Longitude de P2:")))
from math import*

R = float(input("raio da Terra:"))
d = R * arcos

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    t1 = radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 11:30:42) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

t1 = radians(float(input("Latitude de P1:")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P1:")))
g2 = radians(float(input("Longitude de P2:")))
from math import*

R = float(input("raio da Terra:"))
d = R * arcos * (sin(t1) * sin(t2) * cos(t1) *cos(t2) * cos(g1 - g2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    t1 = radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 11:30:56) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

t1 = radians(float(input("Latitude de P1:")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P1:")))
g2 = radians(float(input("Longitude de P2:")))
from math import*

R = float(input("raio da Terra:"))
d = R * arcos * (sin(t1) * sin(t2) * cos(t1) *cos(t2) * cos(g1 - g2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    t1 = radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 11:31:12) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

T1 = radians(float(input("Latitude de P1:")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P1:")))
g2 = radians(float(input("Longitude de P2:")))
from math import*

R = float(input("raio da Terra:"))
d = R * arcos * (sin(t1) * sin(t2) * cos(t1) *cos(t2) * cos(g1 - g2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    T1 = radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 11:31:42) 
-- CODE:
t1 = radians(float(input("Latitude de P1:")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P1:")))
g2 = radians(float(input("Longitude de P2:")))
from math import*

R = float(input("raio da Terra:"))
d = R * arcos * (sin(t1) * sin(t2) * cos(t1) *cos(t2) * cos(g1 - g2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    t1 = radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 11:32:10) 
-- CODE:
t1 = radians(float(input("Latitude de P1:")))
#g1 = radians(float(input("Longitude de P1:")))
#t2 = radians(float(input("Latitude de P1:")))
#g2 = radians(float(input("Longitude de P2:")))
#from math import*

#R = float(input("raio da Terra:"))
#d = R * arcos * (sin(t1) * sin(t2) * cos(t1) *cos(t2) * cos(g1 - g2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    t1 = radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 11:32:31) 
-- CODE:
#t1 = radians(float(input("Latitude de P1:")))
g1 = radians(float(input("Longitude de P1:")))
#t2 = radians(float(input("Latitude de P1:")))
#g2 = radians(float(input("Longitude de P2:")))
#from math import*

#R = float(input("raio da Terra:"))
#d = R * arcos * (sin(t1) * sin(t2) * cos(t1) *cos(t2) * cos(g1 - g2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    g1 = radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 11:35:52) 
-- CODE:
t1 = radians(float(input("Latitude de P1:")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P1:")))
g2 = radians(float(input("Longitude de P2:")))
from math import*

R = float(input("raio da Terra:"))
d = R * arcos * (sin(t1) * sin(t2) * cos(t1) *cos(t2) * cos(g1 - g2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    t1 = radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 11:36:17) 
-- CODE:
t_1 = radians(float(input("Latitude de P1:")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P1:")))
g2 = radians(float(input("Longitude de P2:")))
from math import*

R = float(input("raio da Terra:"))
d = R * arcos * (sin(t1) * sin(t2) * cos(t1) *cos(t2) * cos(g1 - g2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    t_1 = radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 11:36:30) 
-- CODE:
temp1 = radians(float(input("Latitude de P1:")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P1:")))
g2 = radians(float(input("Longitude de P2:")))
from math import*

R = float(input("raio da Terra:"))
d = R * arcos * (sin(t1) * sin(t2) * cos(t1) *cos(t2) * cos(g1 - g2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    temp1 = radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 11:37:03) 
-- CODE:
t1 = radians(float(input("Latitude de P1")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P1:")))
g2 = radians(float(input("Longitude de P2:")))
from math import*

R = float(input("raio da Terra:"))
d = R * arcos * (sin(t1) * sin(t2) * cos(t1) *cos(t2) * cos(g1 - g2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    t1 = radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 11:39:02) 
-- CODE:
t1 = degrees(float(input("Latitude de P1:")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P1:")))
g2 = radians(float(input("Longitude de P2:")))
from math import*

R = float(input("raio da Terra:"))
d = R * arcos * (sin(t1) * sin(t2) * cos(t1) *cos(t2) * cos(g1 - g2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    t1 = degrees(float(input()))
NameError: name 'degrees' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 11:39:20) 
-- CODE:
t1 = int(float(input("Latitude de P1:")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P1:")))
g2 = radians(float(input("Longitude de P2:")))
from math import*

R = float(input("raio da Terra:"))
d = R * arcos * (sin(t1) * sin(t2) * cos(t1) *cos(t2) * cos(g1 - g2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    g1 = radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 11:40:54) 
-- CODE:
t1 = float(input("Latitude de P1:"))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P1:")))
g2 = radians(float(input("Longitude de P2:")))
from math import*

R = float(input("raio da Terra:"))
d = R * arcos * (sin(t1) * sin(t2) * cos(t1) *cos(t2) * cos(g1 - g2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    g1 = radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 11:42:32) 
-- CODE:
t1 = float(input("Latitude de P1:"))
g1 = float(input("Longitude de P1:")))
t2 = print(radians(float(input("Latitude de P1:"))))
g2 = radians(float(input("Longitude de P2:")))
from math import*

R = float(input("raio da Terra:"))
d = R * arcos * (sin(t1) * sin(t2) * cos(t1) *cos(t2) * cos(g1 - g2))

-- ERROR:
File "XXXX", line 2
    g1 = float(input()))
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 11:42:44) 
-- CODE:
t1 = float(input("Latitude de P1:"))
g1 = float(input("Longitude de P1:"))
t2 = print(radians(float(input("Latitude de P1:"))))
g2 = radians(float(input("Longitude de P2:")))
from math import*

R = float(input("raio da Terra:"))
d = R * arcos * (sin(t1) * sin(t2) * cos(t1) *cos(t2) * cos(g1 - g2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    t2 = print(radians(float(input())))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 11:43:38) 
-- CODE:
t1 = print(radians(float(input("Latitude de P1:"))))
g1 = print(radians(float(input("Longitude de P1:"))))
t2 = print(radians(float(input("Latitude de P1:"))))
g2 = print(radians(float(input("Longitude de P2:"))))
from math import*

R = float(input("raio da Terra:"))
d = R * arcos * (sin(t1) * sin(t2) * cos(t1) *cos(t2) * cos(g1 - g2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    t1 = print(radians(float(input())))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 11:44:49) 
-- CODE:
t1 = float(input("Latitude de P1:"))
g1 = float(input("Longitude de P1:"))
t2 = float(input("Latitude de P1:"))
g2 = float(input("Longitude de P2:"))
from math import*

R = float(input("raio da Terra:"))
d = R * arcos * (sin(t1) * sin(t2) * cos(t1) *cos(t2) * cos(g1 - g2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    R = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 11:45:56) 
-- CODE:
t1 = float(input("Latitude de P1:"))
g1 = float(input("Longitude de P1:"))
t2 = float(input("Latitude de P1:"))
g2 = float(input("Longitude de P2:"))
from math import*

R = float(input("raio da Terra:"))
d = R * arcos * (sin(t1) * sin(t2) * cos(t1) *cos(t2) * cos(g1 - g2))
print(radians(d), 2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    R = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 11:48:20) 
-- CODE:
t1 = float(input("Latitude de P1:"))
g1 = float(input("Longitude de P1:"))
t2 = float(input("Latitude de P1:"))
g2 = float(input("Longitude de P2:"))
from math import*

R = float(input("raio da Terra:"))
d = R * acos * (sin(t1) * sin(t2) * cos(t1) *cos(t2) * cos(g1 - g2))
print(radians(d), 2)

-- EXECUTION TIME:
0.171741
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1017/main.py", line 7, in <module>
    R = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 11:49:00) 
-- CODE:
t1 = float(input("Latitude de P1:"))
g1 = float(input("Longitude de P1:"))
t2 = float(input("Latitude de P1:"))
g2 = float(input("Longitude de P2:"))
from math import*

R = float(input("raio da Terra:"))
d = R * acos * (sin(t1) * sin(t2) * cos(t1) *cos(t2) * cos * (g1 - g2))
print(radians(d), 2)

-- EXECUTION TIME:
0.227065
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1017/main.py", line 7, in <module>
    R = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 11:51:35) 
-- CODE:
t1 = float(input("Latitude de P1:"))
g1 = float(input("Longitude de P1:"))
t2 = float(input("Latitude de P1:"))
g2 = float(input("Longitude de P2:"))
from math import*

R = float(input("raio da Terra:"))
d = R * acos(sin(t1) * sin(t2) + cos(t1) *cos(t2) * cos(t2) * (g1 - g2))
print(radians(d), 2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    R = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 11:51:39) 
-- CODE:
t1 = float(input("Latitude de P1:"))
g1 = float(input("Longitude de P1:"))
t2 = float(input("Latitude de P1:"))
g2 = float(input("Longitude de P2:"))
from math import*

R = float(input("raio da Terra:"))
d = R * acos(sin(t1) * sin(t2) + cos(t1) *cos(t2) * cos(t2) * (g1 - g2))
print(radians(d), 2)

-- EXECUTION TIME:
0.125109
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1017/main.py", line 7, in <module>
    R = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 11:52:45) 
-- CODE:
t1 = float(input("Latitude de P1:"))
g1 = float(input("Longitude de P1:"))
t2 = float(input("Latitude de P1:"))
g2 = float(input("Longitude de P2:"))
from math import*

R = float(input("raio da Terra:"))
d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(t2) * cos(g1 - g2))
print(radians(d), 2)

-- EXECUTION TIME:
0.154553
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1017/main.py", line 7, in <module>
    R = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 11:52:48) 
-- CODE:
t1 = float(input("Latitude de P1:"))
g1 = float(input("Longitude de P1:"))
t2 = float(input("Latitude de P1:"))
g2 = float(input("Longitude de P2:"))
from math import*

R = float(input("raio da Terra:"))
d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(t2) * cos(g1 - g2))
print(radians(d), 2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    R = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 11:55:34) 
-- CODE:
t1 = float(input("Latitude de P1:"))
g1 = float(input("Longitude de P1:"))
t2 = float(input("Latitude de P1:"))
g2 = float(input("Longitude de P2:"))
from math import*

R = float(input("raio da Terra:"))
d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(t2) * cos(g1 - g2))
print(radians(d), 2)

-- EXECUTION TIME:
0.139274
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1017/main.py", line 7, in <module>
    R = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 13:15:06) 
-- CODE:
t1 = float(input("Latitude de P1:"))
g1 = float(input("Longitude de P1:"))
t2 = float(input("Latitude de P1:"))
g2 = float(input("Longitude de P2:"))
from math import*

R = float(input("raio da Terra:"))
d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
print(radians(d), 2)

-- EXECUTION TIME:
0.187451
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1017/main.py", line 7, in <module>
    R = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:15:36) 
-- CODE:

from math import*

R = float(input("raio da Terra:"))
d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
print(radians(d), 2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
NameError: name 't1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 13:16:50) 
-- CODE:
t1 = float(input("Latitude de P1:"))
g1 = float(input("Longitude de P1:"))
t2 = float(input("Latitude de P1:"))
g2 = float(input("Longitude de P2:"))
from math import*

R = input("raio da Terra:"))
d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
print(radians(d), 2)

-- EXECUTION TIME:
0.15432
-- ERROR:
  File "/home/codebench/codes/1602/1017/main.py", line 7
    R = input())
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:17:55) 
-- CODE:
t1 = float(input("Latitude de P1:"))
g1 = float(input("Longitude de P1:"))
t2 = float(input("Latitude de P1:"))
g2 = float(input("Longitude de P2:"))

from math import*

R = input("raio da Terra:")
d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
#print(radians(d), 2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    R = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 13:17:59) 
-- CODE:
t1 = float(input("Latitude de P1:"))
g1 = float(input("Longitude de P1:"))
t2 = float(input("Latitude de P1:"))
g2 = float(input("Longitude de P2:"))

from math import*

R = input("raio da Terra:")
d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
#print(radians(d), 2)

-- EXECUTION TIME:
0.154721
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1017/main.py", line 8, in <module>
    R = input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:18:26) 
-- CODE:
t1 = float(input("Latitude de P1:"))
g1 = float(input("Longitude de P1:"))
t2 = float(input("Latitude de P1:"))
g2 = float(input("Longitude de P2:"))

from math import*

R = input("raio da Terra:")
d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
print(radians(d), 2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    R = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:23:59) 
-- CODE:
t1 = float(input("Latitude de P1:"))
g1 = float(input("Longitude de P1:"))
t2 = float(input("Latitude de P1:"))
g2 = float(input("Longitude de P2:"))

from math import*

R = float(input("raio da Terra:"))
d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
print(radians(d), 2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    R = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 13:24:02) 
-- CODE:
t1 = float(input("Latitude de P1:"))
g1 = float(input("Longitude de P1:"))
t2 = float(input("Latitude de P1:"))
g2 = float(input("Longitude de P2:"))

from math import*

R = float(input("raio da Terra:"))
d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
print(radians(d), 2)

-- EXECUTION TIME:
0.205444
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1017/main.py", line 8, in <module>
    R = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:24:29) 
-- CODE:
t1 = float(input("Latitude de P1:"))
g1 = float(input("Longitude de P1:"))
t2 = float(input("Latitude de P1:"))
g2 = float(input("Longitude de P2:"))

from math import*

R = float(input("raio da Terra:"))
d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
print("radians(d)", 2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    R = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 13:24:34) 
-- CODE:
t1 = float(input("Latitude de P1:"))
g1 = float(input("Longitude de P1:"))
t2 = float(input("Latitude de P1:"))
g2 = float(input("Longitude de P2:"))

from math import*

R = float(input("raio da Terra:"))
d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
print("radians(d)", 2)

-- EXECUTION TIME:
0.157326
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1017/main.py", line 8, in <module>
    R = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:25:22) 
-- CODE:
t1 = int(input("Latitude de P1:"))
g1 = int(input("Longitude de P1:"))
t2 = int(input("Latitude de P1:"))
g2 = int(input("Longitude de P2:"))

from math import*

R = int(input("raio da Terra:"))
d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
print(radians(d), 2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    t1 = int(input())
ValueError: invalid literal for int() with base 10: '-3.036131'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 13:25:26) 
-- CODE:
t1 = int(input("Latitude de P1:"))
g1 = int(input("Longitude de P1:"))
t2 = int(input("Latitude de P1:"))
g2 = int(input("Longitude de P2:"))

from math import*

R = int(input("raio da Terra:"))
d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
print(radians(d), 2)

-- EXECUTION TIME:
0.181119
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1017/main.py", line 1, in <module>
    t1 = int(input())
ValueError: invalid literal for int() with base 10: '-3.036131'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:26:11) 
-- CODE:
t1 = radians(float(input("Latitude de P1:"))
g1 = float(input("Longitude de P1:"))
t2 = float(input("Latitude de P1:"))
g2 = float(input("Longitude de P2:"))

from math import*

R = int(input("raio da Terra:"))
d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
print(radians(d), 2)

-- ERROR:
File "XXXX", line 2
    g1 = float(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:26:33) 
-- CODE:
t1 = radians(float(input("Latitude de P1:"))
g1 = radians(float(input("Longitude de P1:"))
t2 = float(input("Latitude de P1:"))
g2 = float(input("Longitude de P2:"))

from math import*

R = int(input("raio da Terra:"))
d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
print(radians(d), 2)

-- ERROR:
File "XXXX", line 2
    g1 = radians(float(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:27:19) 
-- CODE:
t1 = radians(float(input("Latitude de P1:"))
g1 = float(input("Longitude de P1:"))
t2 = float(input("Latitude de P1:"))
g2 = float(input("Longitude de P2:"))

from math import*

R = int(input("raio da Terra:"))
d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
print(radians(d), 2)

-- ERROR:
File "XXXX", line 2
    g1 = float(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:27:49) 
-- CODE:
t1 = radians(float(input("Latitude de P1:"))
g1 = radians(float(input("Longitude de P1:"))
t2 = float(input("Latitude de P1:"))
g2 = float(input("Longitude de P2:"))

from math import*

R = int(input("raio da Terra:"))
d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
print(radians(d), 2)

-- ERROR:
File "XXXX", line 2
    g1 = radians(float(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:27:56) 
-- CODE:
t1 = radians(float(input("Latitude de P1:"))
g1 = radians(float(input("Longitude de P1:")))
t2 = float(input("Latitude de P1:"))
g2 = float(input("Longitude de P2:"))

from math import*

R = int(input("raio da Terra:"))
d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
print(radians(d), 2)

-- ERROR:
File "XXXX", line 2
    g1 = radians(float(input()))
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:29:37) 
-- CODE:
t1 = float(input("Latitude de P1:"))
g1 = float(input("Longitude de P1:")))
t2 = float(input("Latitude de P1:"))
g2 = float(input("Longitude de P2:"))
R = int(input("raio da Terra:"))

from math import*

d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
print(radians(d), 2)

-- ERROR:
File "XXXX", line 2
    g1 = float(input()))
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:30:06) 
-- CODE:
t1 = float(input("Latitude de P1:"))
g1 = float(input("Longitude de P1:"))
t2 = float(input("Latitude de P1:"))
g2 = float(input("Longitude de P2:"))
R = int(input("raio da Terra:"))

from math import*

d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
print(radians(d), 2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    R = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 13:30:13) 
-- CODE:
t1 = float(input("Latitude de P1:"))
g1 = float(input("Longitude de P1:"))
t2 = float(input("Latitude de P1:"))
g2 = float(input("Longitude de P2:"))
R = int(input("raio da Terra:"))

from math import*

d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
print(radians(d), 2)

-- EXECUTION TIME:
0.182757
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1017/main.py", line 5, in <module>
    R = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 13:31:06) 
-- CODE:
t1 = float(input("Latitude de P1:"))
g1 = float(input("Longitude de P1:"))
t2 = float(input("Latitude de P1:"))
g2 = float(input("Longitude de P2:"))
R = int(input("raio da Terra:"))

from math import*

d = R * (acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 - g2)))
print(radians(d), 2)

-- EXECUTION TIME:
0.142839
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1017/main.py", line 5, in <module>
    R = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 13:43:48) 
-- CODE:
t1 = float(input("Latitude de P1:"))
g1 = float(input("Longitude de P1:"))
t2 = float(input("Latitude de P1:"))
g2 = float(input("Longitude de P2:"))
R = float(input("raio da Terra:"))

from math import*

d = R *acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
print(radians(d), 2)

-- EXECUTION TIME:
0.207281
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1017/main.py", line 5, in <module>
    R = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 17:16:13) 
-- CODE:
t1 = float(input("Latitude de P1:"))
g1 = float(input("Longitude de P1:"))
t2 = float(input("Latitude de P1:"))
g2 = float(input("Longitude de P2:"))
R = 6371.01

from math import*

d = R *acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
print(radians(d), 2)

-- OUTPUT:
50.34405158086004 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 17:16:56) 
-- CODE:
t1 = float(input("Latitude de P1:"))
g1 = float(input("Longitude de P1:"))
t2 = float(input("Latitude de P1:"))
g2 = float(input("Longitude de P2:"))
R = 6371.01

from math import*

d = R *acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
print(radians(d), 2)

-- EXECUTION TIME:
0.224349
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.34405158086004 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 17:18:31) 
-- CODE:
t1 = float(input("Latitude de P1:"))
g1 = float(input("Longitude de P1:"))
t2 = float(input("Latitude de P1:"))
g2 = float(input("Longitude de P2:"))
R = 6371.01

from math import*

d = R *acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
print(radians(round(d, 2))

-- EXECUTION TIME:
0.146678
-- ERROR:
  File "/home/codebench/codes/1602/1017/main.py", line 11
    
                              ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 17:21:45) 
-- CODE:
from math import*
t1 = radians(float(input("Latitude de P1:")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P1:")))
g2 = radians(float(input("Longitude de P2:")))
R = 6371.01

from math import*

d = R *acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
print(round(d, 2))

-- OUTPUT:
50.44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 17:22:05) 
-- CODE:
from math import*
t1 = radians(float(input("Latitude de P1:")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P1:")))
g2 = radians(float(input("Longitude de P2:")))
R = 6371.01

from math import*

d = R *acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
print(round(d, 2))

-- EXECUTION TIME:
0.193168
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
